Creo que ya aparece mi nombre

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Julio\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+user.properties.file=C:\\Users\\KokinG7\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
