--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -97,7 +97,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=com.ingenieria.nombres.Nombres
+main.class=com.marcos.programa.Morire
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
